fix menus width issue on mobile/tablets

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,65 +1,84 @@
 
+@media all and (max-width:767px) {
+ 	#site-topmenu {
+	 display:none;
+	}
+	 #site-logo > a {
+	 display: block;
+	 text-align: center;
+	}
+	 .main-search {
+	 padding: 5px 15px !important;
+	}
+	 .navbar-nav {
+	 margin: 10px!important;
+	}
+	 .navbar-nav > li > ul.sub-menu {
+	 position: inherit;
+	}
+	 .img-responsive.site-logo-img {
+	 max-width: 80%;
+	 height: auto;
+	}
+	.category-columns > div > div {
+	    max-width: 400px!important;
+	    margin: 0 auto!important;
+	    display: block!important;
+	    float: none!important;
+	    margin-bottom: 15px!important;
+	}
+	div#sidebar {
+	    max-width: 400px !important;
+	    margin: 0 auto !important;
+	}
+	.s-widget > div > img {
+	    width: 100%;
+	}
+}
+
+@media all and (max-width:610px) {
+ .socialicons {
+	 display:none;
+	}
+	 div#main-search {
+	 width: 60%;
+	}
+	 div#main-registration {
+	 width: 40%;
+	 padding-right: 0!important;
+	}
+	 @media all and (max-width:400px) {
+	 #main-registration {
+	 display:none!important;
+	}
+	 div#main-search {
+	 width: 100%;
+	}
+}
+
+
 /*BELOW DESKTOP SCREENS*/
 @media all and (max-width:960px) {
- .site-header.affix {
- position: static;
-}
- .pink-dashed span {
- font-size:22px;
-}
-}
- @media all and (max-width:767px) {
- #site-topmenu {
- display:none;
-}
- #site-logo > a {
- display: block;
- text-align: center;
-}
- .main-search {
- padding: 5px 15px !important;
-}
- .navbar-nav {
- margin: 10px!important;
-}
- .navbar-nav > li > ul.sub-menu {
- position: inherit;
-}
- .img-responsive.site-logo-img {
- max-width: 80%;
- height: auto;
-}
-.category-columns > div > div {
-    max-width: 400px!important;
-    margin: 0 auto!important;
-    display: block!important;
-    float: none!important;
-    margin-bottom: 15px!important;
-}
-div#sidebar {
-    max-width: 400px !important;
-    margin: 0 auto !important;
-}
-.s-widget > div > img {
-    width: 100%;
-}
-}
- @media all and (max-width:610px) {
- .socialicons {
- display:none;
-}
- div#main-search {
- width: 60%;
-}
- div#main-registration {
- width: 40%;
- padding-right: 0!important;
-}
- @media all and (max-width:400px) {
- #main-registration {
- display:none!important;
-}
- div#main-search {
- width: 100%;
-}
+	 .site-header.affix {
+	 position: static;
+	}
+	 .pink-dashed span {
+	 font-size:22px;
+	}
+
+	.nav > li > a {
+		font-size: 13px;
+		padding: 10px 10px;
+	}
+
+	.register-btn{
+		font-size:15px !important;
+	}
+
+	.socialicons .fa {	
+		font-size: 13px;
+		height: 25px;
+		line-height: 22px;	
+		width: 25px;
+	}
 }
